remove about, fix loader in dark mode

--- a/src/scss/theme/dark/common.scss
+++ b/src/scss/theme/dark/common.scss
@@ -97,6 +97,10 @@ html.themeDark {
         .icon.search { background-image: url('#{$themePath}/icon/menu/action/search0.svg'); }
 	}
 
+	#root-loader {
+		.version { color: var(--color-text-primary); }
+	}
+
     /* Components */
 
     .loaderWrapper {
